--- a/src/App.css
+++ b/src/App.css
@@ -1,4 +1,9 @@
 @import url("https://fonts.googleapis.com/css2?family=Montserrat:wght@400;600;700&family=Raleway:wght@400;500;600;700&display=swap");
+* {
+  box-sizing: border-box;
+  padding: 0;
+  margin: 0;
+}
 
 .App {
   width: 100%;
@@ -16,7 +21,7 @@ h1 {
   line-height: 42px;
   text-align: center;
   letter-spacing: -0.045em;
-
+  margin-bottom: 2rem;
   color: #333333;
 }
 
@@ -64,6 +69,7 @@ ul {
 ul li {
   display: flex;
   align-items: center;
+  justify-content: center;
   list-style: none;
   width: 100%;
 }
@@ -74,7 +80,7 @@ li input[type="checkbox"] {
   margin-right: 0.5rem;
   border: 1px solid #828282;
   border-radius: 4px;
-  width: 5%;
+  width: 10%;
 }
 
 li span {
@@ -83,12 +89,8 @@ li span {
   font-weight: 500;
   font-size: 18px;
   line-height: 22px;
-  width: 70%;
+  width: 75%;
   color: #000000;
-}
-
-li span.material-icons {
-  float: right;
 }
 
 span.completed {
@@ -98,8 +100,17 @@ span.completed {
 button.delete-btn {
   background: none;
   box-shadow: none;
+  padding: 0.5rem 0;
   float: right;
-  width: 25%;
+  width: 10%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+span.material-icons {
+  text-align: center;
+  font-size: 18px;
 }
 
 div.input {
@@ -152,7 +163,7 @@ div.toggle-btn {
 
 .material-icons {
   font-family: "Material Icons";
-  font-size: 1.5rem;
+  font-size: 1.2rem;
   color: #bdbdbd;
 }
 
@@ -175,4 +186,50 @@ footer p {
   text-align: center;
 
   color: #a9a9a9;
+}
+
+@media (max-width: 920px) {
+  button {
+    font-size: 14px;
+    line-height: 17px;
+    padding: 0.8rem 1.3rem;
+  }
+
+  div.toggle-btn {
+    width: 85%;
+  }
+  .toggle-btn button {
+    padding: 1rem 0.5rem;
+    margin: 0 0.5rem;
+  }
+
+  .input-info {
+    width: 90%;
+  }
+
+  div.input input {
+    max-width: 50%;
+    padding: 0.8rem 1.3rem;
+    margin: 1rem 0;
+  }
+
+  div.input button {
+    font-size: 0.75rem;
+  }
+
+  li input[type="checkbox"] {
+    height: 1rem;
+    width: 1rem;
+    width: 10%;
+  }
+
+  li span {
+    font-size: 16px;
+    line-height: 18px;
+  }
+
+  .delete-all-btn {
+    font-size: 0.75rem;
+    padding: 0.8rem 1rem;
+  }
 }
